# oresat-libdxwifi

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  STYLE.md  startmonitor.sh
.github/workflows/: build_test.yml  release.yml
archive/: BUILD.md
archive/rootfs/etc/: rc.local
archive/rootfs/root/: inject_test.py  oresatlive.sh
archive/rootfs/root/wifibroadcast/mavlink/message_definitions/: common.xml  uAvionix.xml
bootfs/: config.txt
config/debian/decode/: postrm
config/debian/encode/: postinst  postrm  prerm
config/debian/rx/: postrm  prerm
config/network/: 50-ath9k-htc.link
config/systemd/: oresat-dxwifi-txd.service
dxwifi/decode/: cli.c  cli.h  decode.c
dxwifi/rx/: CMakeLists.txt  cli.c  cli.h  rx.c
dxwifi/tx/: CMakeLists.txt  cli.c  cli.h  tx.c  tx.h  tx_wrapper.cpp
error-simulator/: Channel_Emulator.c  Error_Simulator.c  README.md  test
fec/: README.md
libdxwifi/: dxwifi.h  fec.c  fec.h  power_amp.h  receiver.c  receiver.h  transmitter.c  transmitter.h
libdxwifi/details/: assert.h  crc32.h  dirwatch.c  dirwatch.h  heap.h  ieee80211.h  logging.h  radiotap.c  radiotap.h  syslogger.h  utils.h
openfec/: CMakeLists.txt
openfec/perf_eval/: run_tests.pl
openfec/src/: CMakeLists.txt
openfec/src/lib_stable/ldpc_staircase/: of_ldpc_staircase_api.c
openfec/src/lib_stable/reed-solomon_gf_2_8/: of_reed-solomon_gf_2_8_api.c
openfec/src/lib_stable/reed-solomon_gf_2_m/: of_reed-solomon_gf_2_m_api.c
patches/firmware/: htc_9271-1.4-cck-2Mb.fw  htc_9271-1.4-ht-13Mb.fw  htc_9271-1.4-ofdm-48Mb.fw
rootfs/root/: jpeg_stream_tx_stdout.py
test/: genbytes.py  sweep.py  test_tx_rx.py
tx-rx/: CMakeLists.txt  README.md  startmonitor.sh
tx-rx/.github/workflows/: build_test.yml
tx-rx/conf/: dxwifi.conf
tx-rx/config/debian/decode/: postinst  prerm
tx-rx/config/debian/rx/: postinst
tx-rx/config/debian/tx/: postinst  postrm  prerm
tx-rx/config/rsyslog/: 00-dxwifi.conf
tx-rx/config/systemd/: oresat-dxwifi-txd.service  oresat-live-txd.service
tx-rx/dxwifi/decode/: CMakeLists.txt  decode.c
tx-rx/dxwifi/encode/: CMakeLists.txt  cli.c  cli.h  encode.c
tx-rx/dxwifi/rx/: CMakeLists.txt  cli.c  cli.h  rx.c
tx-rx/dxwifi/tx/: CMakeLists.txt  cli.c  cli.h  tx.c
tx-rx/libdxwifi/: CMakeLists.txt  decoder.c  decoder.h  dxwifi.h  encoder.c  encoder.h  fec.c  fec.h  power_amp.c  receiver.c  receiver.h  transmitter.c  transmitter.h
tx-rx/libdxwifi/details/: assert.h  crc32.h  daemon.c  daemon.h  dirwatch.c  dirwatch.h  heap.c  heap.h  ieee80211.h  logging.c  logging.h  syslogger.c  syslogger.h  utils.c  utils.h
tx-rx/openfec/: CMakeLists.txt
tx-rx/openfec/src/: CMakeLists.txt
tx-rx/openfec/src/lib_stable/2d_parity_matrix/: of_2d_parity_api.c
tx-rx/openfec/src/lib_stable/ldpc_staircase/: of_ldpc_staircase_api.c
tx-rx/patches/firmware/: README.md  htc_9271-1.4-ofdm-6Mb.fw
tx-rx/platform/: arm-linux-gnueabihf-gcc.cmake
tx-rx/test/: test_tx_rx.py
tx-rx/test/data/: genbytes.py
tx-rx/tests/: genbytes.py
